# slush-cmake-library

./: README.md  package.json  slushfile.js
templates/== libraryName ==/: CMakeLists.txt
templates/== libraryName ==/doc/: conf.py.in
templates/== libraryName ==/include/== libraryName ==/: == libraryName ==.h
templates/== libraryName ==/src/: library_main.cpp
templates/== libraryName ==_test/: CMakeLists.txt
templates/== libraryName ==_test/src/: test1.cpp
templates_Catch2/== libraryName ==_test/: CMakeLists.txt
templates_Catch2/== libraryName ==_test/src/: test1.cpp
templates_GoogleTest/== libraryName ==_test/: CMakeLists.txt
templates_GoogleTest/== libraryName ==_test/src/: test1.cpp
